--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Lara Yang"
+title                    : "Madison Singell"
 title_separator          : "-"
-name                     : &name "Lara Yang"
+name                     : &name "Madison Singell"
 description              : &description "personal description"
-url                      : https://larayang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://mhsingell.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "larayang/larayang.github.io"
+repository               : "mhsingell/mhsingell.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,8 +80,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Lara Yang"
-  avatar           : "profile.jpg"
+  name             : "Madison Singell"
+  avatar           : "profile.jpeg"
   bio              : "PhD Candidate in Macro Organizational Behavior"
   employer         : "Stanford Graduate School of Business"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
