--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "PhD Candidate in Macro Organizational Behavior"
   employer         : "Stanford Graduate School of Business"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
-  email            : "larayang@stanford.edu"
+  email            : "msingell@stanford.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -100,7 +100,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "lara-yang"
+  linkedin         : "madison-singell"
   orcid            : 
   pinterest        :
   soundcloud       :
