--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Madison Singell"
   avatar           : "profile.jpeg"
   bio              : "PhD Candidate in Macro Organizational Behavior"
-  employer         : "Stanford Graduate School of Business"
+  employer         : "Stanford GSB"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            : "msingell@stanford.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
