Pic and JMP Update

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Madison Singell"
-  avatar           : "profile.jpeg"
+  avatar           : "profile2.jpeg"
   bio              : "PhD Candidate in Macro Organizational Behavior"
   employer         : "Stanford GSB"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
